--- a/product.html
+++ b/product.html
@@ -120,7 +120,7 @@ textarea{resize:none;height:80px}
     <button class="copy-btn" id="copyBtn" onclick="copyTracking()" disabled>Copy Tracking Info</button>
 
     <div class="notice">
-      After sending for delivery, your tracking info will be generated. Copy the tracking info using the "Copy Tracking Info" button and provide it to support to check your delivery status.
+      After sending for delivery, your tracking info will be generated. Copy the tracking info using the "Copy Tracking Info" button and provide it to support by clicking on that blue icon at the bottom right of your device to check your delivery status.
     </div>
 
     <div class="success-box" id="successBox"></div>
@@ -224,3 +224,4 @@ function checkFields(){
 
 </body>
 </html>
+
